feat(hotel): 添加酒店、房间、预订等实体类及相关数据访问接口